[package]
name = "runtime-integration-tests"
version = "1.17.2"
description = "Integration tests"
authors = ["GalacticCouncil"]
edition = "2021"
homepage = "https://github.com/galacticcouncil/HydraDX-node"
license = "Apache 2.0"
repository = "https://github.com/galacticcouncil/HydraDX-node"

[dependencies]
frame-remote-externalities = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
scraper = { workspace = true }
primitives = { workspace = true }
hydradx-runtime = { workspace = true }
hydradx-adapters = { workspace = true }
pallet-omnipool = { workspace = true }
pallet-circuit-breaker = { workspace = true }
pallet-omnipool-liquidity-mining = { workspace = true }
pallet-bonds = { workspace = true }
pallet-stableswap = { workspace = true }
pallet-referrals = { workspace = true }

# Warehouse dependencies
pallet-asset-registry = { workspace = true }
hydradx-traits = { workspace = true }
pallet-transaction-multi-payment = { workspace = true, features = ["evm"] }
pallet-currencies = { workspace = true }
pallet-duster = { workspace = true }
pallet-ema-oracle = { workspace = true }
warehouse-liquidity-mining = { workspace = true }
pallet-otc = { workspace = true }
pallet-relaychain-info = { workspace = true }
pallet-route-executor = { workspace = true}
pallet-dca = { workspace = true}
pallet-dynamic-fees = { workspace = true }
pallet-staking = { workspace = true}
pallet-lbp = { workspace = true}
pallet-xyk = { workspace = true}

pallet-treasury = { workspace = true }
pallet-democracy = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-elections-phragmen = { workspace = true }
pallet-tips = { workspace = true }

# collator support
pallet-collator-selection = { workspace = true }
pallet-authorship = { workspace = true }

# ORML dependencies
orml-tokens = { workspace = true }
orml-traits = { workspace = true }
orml-vesting = { workspace = true }
orml-xcm = { workspace = true }

# orml XCM support
orml-xtokens = { workspace = true }
orml-xcm-support = { workspace = true }
orml-unknown-tokens = { workspace = true }

# Evm
pallet-evm = { workspace = true }
fp-evm = { workspace = true }
# Cumulus dependencies
cumulus-pallet-aura-ext = { workspace = true }
cumulus-pallet-parachain-system = { workspace = true }
cumulus-pallet-xcm = { workspace = true }
cumulus-pallet-xcmp-queue = { workspace = true }
cumulus-pallet-dmp-queue = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-utility = { workspace = true }
cumulus-primitives-parachain-inherent = { workspace = true }
cumulus-primitives-timestamp = { workspace = true }
parachain-info = { workspace = true }
cumulus-test-relay-sproof-builder = { workspace = true }

# Polkadot dependencies
polkadot-parachain = { workspace = true, features = ["wasm-api"] }
xcm-builder = { workspace = true }
pallet-xcm = { workspace = true }
xcm-executor = { workspace = true }
polkadot-xcm = { workspace = true }

# Substrate dependencies
frame-benchmarking = { workspace = true, optional = true }
frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-benchmarking = { workspace = true, optional = true }
frame-system-rpc-runtime-api = { workspace = true }
pallet-aura = { workspace = true }
pallet-balances = { workspace = true }
pallet-collective = { workspace = true }
pallet-session = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-utility = { workspace = true }
pallet-uniques = { workspace = true }
pallet-im-online = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-externalities = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }
sp-staking = { workspace = true }
sp-trie = { workspace = true }
sp-io = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-authority-discovery = { workspace = true }
sc-consensus-grandpa = { workspace = true }

polkadot-primitives = { workspace = true }
polkadot-service = { workspace = true, features = ["full-node"] }
polkadot-runtime-parachains = { workspace = true }
polkadot-runtime = { workspace = true }

[dev-dependencies]
hex-literal = "0.4.1"
pretty_assertions = "1.2.1"
xcm-emulator = { workspace = true }

[features]
default = ["std"]
std = [
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "orml-tokens/std",
    "orml-traits/std",
    "orml-vesting/std",
    "orml-xtokens/std",
    "orml-xcm-support/std",
    "orml-unknown-tokens/std",
    "cumulus-pallet-parachain-system/std",
    "cumulus-pallet-aura-ext/std",
    "cumulus-pallet-xcm/std",
    "cumulus-pallet-xcmp-queue/std",
    "cumulus-primitives-core/std",
    "cumulus-primitives-parachain-inherent/std",
    "polkadot-xcm/std",
    "xcm-builder/std",
    "xcm-executor/std",
    "pallet-xcm/std",
    "parachain-info/std",
    "pallet-asset-registry/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-elections-phragmen/std",
    "pallet-session/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-multi-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-utility/std",
    "pallet-im-online/std",
    "pallet-currencies/std",
    "sp-api/std",
    "sp-authority-discovery/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-consensus-babe/std",
    "sp-core/std",
    "sp-io/std",
    "sp-inherents/std",
    "sp-externalities/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-trie/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "pallet-treasury/std",
    "pallet-collective/std",
    "pallet-democracy/std",
    "pallet-scheduler/std",
    "pallet-tips/std",
    "pallet-collator-selection/std",
    "pallet-authorship/std",
    "hydradx-traits/std",
    "pallet-relaychain-info/std",
    "polkadot-runtime/std",
    "hydradx-runtime/std",
    "pallet-staking/std",
    "scraper/std",
]

# we don't include integration tests when benchmarking feature is enabled
runtime-benchmarks = [
    "hydradx-runtime/runtime-benchmarks",
    "polkadot-runtime/runtime-benchmarks",
]
try-runtime = [
    "polkadot-runtime/try-runtime",
]
