[package]
authors = ['GalacticCouncil']
edition = '2021'
homepage = 'https://github.com/galacticcouncil/hydradx-math'
license = 'Apache-2.0'
name = "hydra-dx-math"
description = "A collection of utilities to make performing liquidity pool calculations more convenient."
repository = 'https://github.com/galacticcouncil/hydradx-math'
version = "9.0.1"

[dependencies]
primitive-types = {  workspace = true }
num-traits = {  workspace = true }
fixed = {  workspace = true, features = ["num-traits"] }
# Added because of use of the FixedU128, used to implement `Ratio`
codec = {  workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = {  workspace = true }
sp-arithmetic = { workspace = true }
sp-std = { workspace = true }
serde = {  workspace = true }

[dev-dependencies]
approx = {  workspace = true }
criterion = {  workspace = true }
proptest = {  workspace = true }
rand = {  workspace = true, features= ["std_rng"] }
rand_xoshiro = {  workspace = true }
rug = {  workspace = true }
test-case = {  workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde/std",
    "sp-arithmetic/std",
    "sp-std/std"
]
runtime-benchmarks = []

[[bench]]
name = "benchmarks"
harness = false
