[package]
name = "primitives"
version = "6.1.0"
authors = ["GalacticCouncil"]
edition = "2021"
repository = "https://github.com/galacticcouncil/HydraDX-node"

[dependencies]
codec = { workspace = true }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"] }
serde = { features = ["derive"], optional = true, version = "1.0.136" }
hex-literal = { workspace = true }
static_assertions = "1.1.0"

# Substrate dependencies
frame-support = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }

# Polkadot dependencies
polkadot-primitives = { workspace = true }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "polkadot-primitives/std",
    "sp-core/std",
]
