[package]
name = "hydradx-runtime-fuzzer"
version = "0.1.0"
description = "Fuzzer for the HydraDX Runtime"
authors = ["GalacticCouncil"]
edition = "2021"
homepage = "https://github.com/galacticcouncil/HydraDX-node"
license = "Apache 2.0"
repository = "https://github.com/galacticcouncil/HydraDX-node"

[dependencies]
ziggy = { version = "0.8", default-features = false }

hydradx-runtime = { workspace = true }
primitives = { workspace = true }

codec = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }

sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-state-machine = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-transaction-storage-proof = { workspace = true }

pallet-timestamp = { workspace = true }
pallet-balances = { workspace = true }

cumulus-primitives-core = { workspace = true }
cumulus-primitives-parachain-inherent = { workspace = true }
cumulus-pallet-parachain-system = { workspace = true }
cumulus-test-relay-sproof-builder = { workspace = true }

[features]
default = ["std", "try-runtime"]
std = [
    "hydradx-runtime/std",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"pallet-timestamp/std",
	"sp-state-machine/std",
	"sp-consensus-aura/std",
]
try-runtime = [
    "hydradx-runtime/try-runtime",
	"frame-support/try-runtime",
	"pallet-timestamp/try-runtime",
]
